--- a/frontend/src/Styles/loginStyle.css
+++ b/frontend/src/Styles/loginStyle.css
@@ -15,10 +15,11 @@
 }
 
 .background-gradient {
-  background-image: linear-gradient(
-    109.6deg,
-    rgba(62, 161, 219, 1) 11.2%,
-    rgb(233, 229, 246) 100.2%
+  background: rgb(216, 243, 255);
+  background: linear-gradient(
+    90deg,
+    rgba(216, 243, 255, 1) 9%,
+    rgba(208, 247, 255, 1) 100%
   );
 }
 
