--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+* {
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+}
+
+html,
+body {
+  height: 100vh;
+  width: 100vw;
+}
