--- a/frontend/src/app/components/nav-bar/nav-bar.component.css
+++ b/frontend/src/app/components/nav-bar/nav-bar.component.css
@@ -1,5 +1,5 @@
 .navbar {
-  height: 12vh;
+  height: 10vh;
   width: 100vw;
 
   background: rgb(207, 220, 250);
@@ -10,8 +10,9 @@
     rgba(201, 255, 255, 1) 87%
   );
 
-  display: grid;
-  grid-template-columns: 15% auto 15%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .clickable {
@@ -23,25 +24,16 @@
   width: 2rem;
 
   margin-left: 1.5rem;
-
-  place-self: left;
-  align-self: center;
 }
 
 .logo {
   height: 5rem;
   width: 5rem;
-
-  place-self: center;
-  align-self: center;
 }
 
 .logout {
-  height: 2rem;
+  height: 5rem;
   width: 2rem;
 
   margin-right: 1.5rem;
-
-  place-self: end;
-  align-self: center;
 }
