--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -10,4 +10,9 @@ html,
 body {
   height: 100vh;
   width: 100vw;
+  background-color: #e5e5e5;
+  overflow-x: hidden;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
