--- a/frontend/src/app/components/tags-card/tags-card.component.html
+++ b/frontend/src/app/components/tags-card/tags-card.component.html
@@ -8,4 +8,8 @@
       >{{ tag.description }}</mat-chip
     >
   </mat-chip-list>
+  <div class="see-more" (click)="vaiFilhao()">
+    <img class="plus-icon" src="assets/plus.svg" alt="Plus icon" />
+    <span class="see-more-text">Ver mais</span>
+  </div>
 </div>
