--- a/frontend/src/app/components/favoritos/favoritos.component.html
+++ b/frontend/src/app/components/favoritos/favoritos.component.html
@@ -1,7 +1,11 @@
 <main class="home-container">
-    <div class="content">
-      <app-post-card></app-post-card>
-    </div>
+  <div class="post-container">
+    <ng-container *ngFor="let post of posts">
+      <div class="post-card">
+      </div>
+      <img class="coracao clickable"  (click)="teste()" src="./assets/coracao.svg" alt="" />
+    </ng-container>
+  </div>
     <div class="tags">
       <app-tags-card></app-tags-card>
     </div>
