Arrumando a posição do botao

--- a/frontend/src/app/components/favoritos/favoritos.component.css
+++ b/frontend/src/app/components/favoritos/favoritos.component.css
@@ -31,7 +31,8 @@
   .coracao{
     height: 40px;
     position: relative;
-    left: 50%;
+    left: 96.5%;
+    top: 80%;
   }
   .post-share {
     text-align:center;
