Telas de login e cadastro feitas agora falta linkar os botões

--- a/frontend/src/app/components/tags-card/tags-card.component.css
+++ b/frontend/src/app/components/tags-card/tags-card.component.css
@@ -114,7 +114,7 @@
 
 /* The Close Button */
 .close {
-  color: white;
+  color: #6e2fad;
   float: right;
   font-size: 28px;
   font-weight: bold;
