--- a/frontend/src/app/components/post-card/post-card.component.css
+++ b/frontend/src/app/components/post-card/post-card.component.css
@@ -1,10 +1,10 @@
 .post-card {
-  height: 25vh;
+  height: 30vh;
   width: 95%;
   margin: 2rem auto 3rem;
 
   border-radius: 15px;
-  background: #e5e5e5;
+  background: #f5f5f5;
   box-shadow: 5px 5px 12px #bebebe, -5px -5px 12px #ffffff;
 
   transition: all 0.3s ease-in-out;
@@ -13,7 +13,7 @@
 
 .post-card:hover {
   border-radius: 15px;
-  background: #e5e5e5;
+  background: #f5f5f5;
   box-shadow: 5px 5px 0px #777777, -5px -5px 0px #ffffff;
 
   transform: translateY(-0.3rem);
