--- a/frontend/src/app/components/tags-card/tags-card.component.css
+++ b/frontend/src/app/components/tags-card/tags-card.component.css
@@ -47,16 +47,6 @@
 /* The Modal (background) */
 .modal-hidden {
   display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
 
 .modal-open {
@@ -114,7 +104,7 @@
 
 /* The Close Button */
 .close {
-  color: white;
+  color: black;
   float: right;
   font-size: 28px;
   font-weight: bold;
@@ -122,15 +112,15 @@
 
 .close:hover,
 .close:focus {
-  color: #000;
+  opacity: 0.6;
   text-decoration: none;
   cursor: pointer;
 }
 
 .modal-header {
   padding: 2px 16px;
-  background-color: rgb(205, 245, 255);
   color: #6e2fad;
+  border-bottom: 2px solid #d3d3d3;
 }
 
 .modal-body {
@@ -139,6 +129,4 @@
 
 .modal-footer {
   padding: 2px 16px;
-  background-color: rgb(205, 245, 255);
-  color: rgb(205, 245, 255);
 }
