Adicionei tela de perfil do usuario, mas ainda faltam dois botões (configuração e favoritos).

--- a/frontend/src/app/components/tela-cadastro/tela-cadastro.component.html
+++ b/frontend/src/app/components/tela-cadastro/tela-cadastro.component.html
@@ -4,8 +4,8 @@
         <input type="text" class="campos" name="Nome Completo" placeholder="Nome Completo">    
         <input type="text" class="campos" name="E-mail" placeholder="E-mail">
         <input type="text" class="campos" name="Nome de Usuário" placeholder="Nome de Usuário">
-        <input type="text" class="campos" name="Senha" placeholder="Senha">
-        <input type="text" class="campos" name="Repita a Senha" placeholder="Repita a Senha">
+        <input type="password" class="campos" name="Senha" placeholder="Senha">
+        <input type="password" class="campos" name="Repita a Senha" placeholder="Repita a Senha">
         <button id="botao">Finalizar Cadastro</button>
 
         
