--- a/frontend/src/app/components/tela-login/tela-login.component.html
+++ b/frontend/src/app/components/tela-login/tela-login.component.html
@@ -2,7 +2,7 @@
     <img class="logo-clickable" src="./assets/logo.svg" alt="" />
     <div id="login">
         <input type="text" class="campos" name="Usuario" placeholder="Nome de usuário">
-        <input type="text" class="campos" name="Senha" placeholder="Senha">
+        <input type="password" class="campos" name="Senha" placeholder="Senha">
         <button id="botao">Login</button>
     </div>
     <div>
