--- a/frontend/src/app/components/meuperfil/meuperfil.component.css
+++ b/frontend/src/app/components/meuperfil/meuperfil.component.css
@@ -39,6 +39,15 @@
     border: 1px solid rgba(255, 255, 255, 0.18);
   }
   
+  .user-config{
+    height: 2vh;
+    width: 10%;
+    border-radius: 10%;
+    margin: 2rem auto;
+    margin-top: -100%;
+    margin-right: 10%;
+  }
+
   .user-image {
     height: 22vh;
     width: 60%;
@@ -57,6 +66,7 @@
     width: 22rem;
     height: 22px;
     margin-left: -25.5%;
+    margin-top: 80%;
 
     font-size: 1.2rem;
     text-align: center;
@@ -78,7 +88,7 @@
     width: 22rem;
     height: 350px;
     margin-left: -25.5%;
-    margin-top: 15%;
+    margin-top: 20%;
 
     font-size: 1.2rem;
     text-align: center;
@@ -89,7 +99,7 @@
     width: 22rem;
     height: 350px;
     margin-left: -25.5%;
-    margin-top: -25%;
+    margin-top: -40%;
 
     font-size: 1.2rem;
     text-align: center;
