--- a/frontend/src/app/components/favoritos/favoritos.component.html
+++ b/frontend/src/app/components/favoritos/favoritos.component.html
@@ -1,13 +1,19 @@
+<app-nav-bar></app-nav-bar>
+
 <main class="home-container">
   <div class="post-container">
     <ng-container *ngFor="let post of posts">
       <div class="post-card">
-        <img class="coracao clickable"  (click)="teste()" src="./assets/coracao.svg" alt="" />
+        <img
+          class="coracao clickable"
+          (click)="teste()"
+          src="./assets/coracao.svg"
+          alt=""
+        />
       </div>
-      
     </ng-container>
   </div>
-    <div class="tags">
-      <app-tags-card></app-tags-card>
-    </div>
-  </main>
+  <div class="tags">
+    <app-tags-card></app-tags-card>
+  </div>
+</main>
