--- a/frontend/src/app/components/tela-login/tela-login.component.html
+++ b/frontend/src/app/components/tela-login/tela-login.component.html
@@ -1,12 +1,18 @@
 <body class="pagina">
-    <img class="logo-clickable" src="./assets/logo.svg" alt="" />
-    <div id="login">
-        <input type="text" class="campos" name="Usuario" placeholder="Nome de usuário">
-        <input type="password" class="campos" name="Senha" placeholder="Senha">
-        <button id="botao">Login</button>
-    </div>
-    <div>
-        <a id="botaoCadastro" href="http://localhost:4200/cadastro">Não tem uma conta? Cadastre-se</a>
-    </div>
+  <img class="logo-clickable" src="./assets/logo.svg" alt="" />
+  <div id="login">
+    <input
+      type="text"
+      class="campos"
+      name="Usuario"
+      placeholder="Nome de usuário"
+    />
+    <input type="password" class="campos" name="Senha" placeholder="Senha" />
+    <button id="botao" (click)="toHome()">Login</button>
+  </div>
+  <div>
+    <a id="botaoCadastro" (click)="toCadastro()"
+      >Não tem uma conta? Cadastre-se</a
+    >
+  </div>
 </body>
-
