--- a/frontend/src/app/components/post-card/post-card.component.css
+++ b/frontend/src/app/components/post-card/post-card.component.css
@@ -2,7 +2,8 @@
   height: 30vh;
   width: 95%;
   margin: 2rem auto 3rem;
-
+  display: flex;
+  justify-content: center;
   border-radius: 15px;
   background: #f5f5f5;
   box-shadow: 5px 5px 12px #bebebe, -5px -5px 12px #ffffff;
@@ -17,4 +18,10 @@
   box-shadow: 5px 5px 0px #777777, -5px -5px 0px #ffffff;
 
   transform: translateY(-0.3rem);
+}
+
+.titulo {
+  margin-top: 1rem;
+  font-family: "Koho", sans-serif;
+  
 }
