--- a/frontend/src/app/components/post-card/post-card.component.html
+++ b/frontend/src/app/components/post-card/post-card.component.html
@@ -1,7 +1,7 @@
 <div class="post-container">
   <ng-container *ngFor="let post of posts">
-    <div class="post-card">
-      <h3>{{ post.body_text }}</h3>
+    <div class="post-card" (click)="redirectToRead()">
+      <h1 class="titulo">{{ post.titulo }}</h1>
     </div>
   </ng-container>
 </div>
