--- a/frontend/src/app/components/seguindo/seguindo.component.html
+++ b/frontend/src/app/components/seguindo/seguindo.component.html
@@ -1,11 +1,13 @@
+<app-nav-bar></app-nav-bar>
+
 <div class="post-container">
-    <ng-container *ngFor="let post of posts">
-      <div class="post-card">
-        <div class="follow-info">
-            <img src="assets/user.svg" alt="" class="user-image">
-            <div class="follow-text">User</div>
-        </div>
-        <button class="follow-button">Deixar de seguir</button>
+  <ng-container *ngFor="let post of posts">
+    <div class="post-card">
+      <div class="follow-info">
+        <img src="assets/user.svg" alt="" class="user-image" />
+        <div class="follow-text">User</div>
       </div>
-    </ng-container>
-  </div>
+      <button class="follow-button">Deixar de seguir</button>
+    </div>
+  </ng-container>
+</div>
