--- a/frontend/src/app/components/tela-cadastro/tela-cadastro.component.html
+++ b/frontend/src/app/components/tela-cadastro/tela-cadastro.component.html
@@ -1,13 +1,26 @@
 <body class="pagina">
-    <img class="logo-clickable" src="./assets/logo.svg" alt="" />
-    <div id="cadastro">
-        <input type="text" class="campos" name="Nome Completo" placeholder="Nome Completo">    
-        <input type="text" class="campos" name="E-mail" placeholder="E-mail">
-        <input type="text" class="campos" name="Nome de Usuário" placeholder="Nome de Usuário">
-        <input type="password" class="campos" name="Senha" placeholder="Senha">
-        <input type="password" class="campos" name="Repita a Senha" placeholder="Repita a Senha">
-        <button id="botao">Finalizar Cadastro</button>
-
-        
-    </div>
+  <img class="logo-clickable" src="./assets/logo.svg" alt="" />
+  <div id="cadastro">
+    <input
+      type="text"
+      class="campos"
+      name="Nome Completo"
+      placeholder="Nome Completo"
+    />
+    <input type="text" class="campos" name="E-mail" placeholder="E-mail" />
+    <input
+      type="text"
+      class="campos"
+      name="Nome de Usuário"
+      placeholder="Nome de Usuário"
+    />
+    <input type="password" class="campos" name="Senha" placeholder="Senha" />
+    <input
+      type="password"
+      class="campos"
+      name="Repita a Senha"
+      placeholder="Repita a Senha"
+    />
+    <button id="botao">Finalizar Cadastro</button>
+  </div>
 </body>
