Adicionando rota para tela configuração.

--- a/frontend/src/app/components/configuracao/configuracao.component.html
+++ b/frontend/src/app/components/configuracao/configuracao.component.html
@@ -1,3 +1,4 @@
+<app-nav-bar></app-nav-bar>
 <main class="config-container">
     <div class="user-card">
         <img src="assets/user.svg" alt="" class="user-image" />
