--- a/frontend/src/app/components/meuperfil/meuperfil.component.html
+++ b/frontend/src/app/components/meuperfil/meuperfil.component.html
@@ -4,7 +4,7 @@
   <div class="user-card">
     <img src="assets/user.svg" alt="" class="user-image" />
     <p class="user-name">{{ userName }}</p>
-    <img src="assets/engrenagem.svg" alt="" class="user-config" />
+    <img src="assets/engrenagem.svg" alt="" class="user-config" (click)='redirect()'/>
     <div class="user-info-title">
       <label>Informações</label>
     </div>
