--- a/frontend/src/app/components/criacao-post/criacao-post.component.html
+++ b/frontend/src/app/components/criacao-post/criacao-post.component.html
@@ -1,23 +1,26 @@
+
 <nav class="navbar">
     <img class="back-arrow clickable" src="./assets/back-arrow.svg" alt="" />
     <img class="logo clickable" src="./assets/logo.svg" alt="" />
     <img class="logout clickable" src="./assets/logout.svg" alt="" />
 </nav>
 
-
-
-<h1 id="título">Publicação de Posts</h1>
+<h1>Criação de Posts</h1>
 <br>
-
 <div class="campo">
-    <br><label><strong>Digite aqui o seu texto: </strong>
-    </label><br>
-    <textarea row="8" class="txtarea">
-  </textarea>
+    <label><strong> Título: </strong></label>
+    <br><strong><textarea row="8" class="txtarea1"></textarea></strong>
   
-    <div class="icones">
-        <img class="anexar" src="./assets/anexar.svg" alt="" />
-        <img class="send-button" src="./assets/send-button.svg" alt="" />
-      </div>
+    <br><label><strong> Artigo: </strong></label>
+    <br><strong><textarea row="8" class="txtarea"></textarea></strong>
+    
+  <div class="icones">
+        
+        <strong><input type="file" name=" Image"/></strong>
+        <form action="home">
+          <strong><input type="submit" value="  Concluir  " /></strong>
+        </form>
+  
+  </div>
 
 </div>
