Adicionando rotas e informações na pagina home

--- a/frontend/src/app/components/leitura-page/leitura-page.component.html
+++ b/frontend/src/app/components/leitura-page/leitura-page.component.html
@@ -1,5 +1,10 @@
 <app-nav-bar></app-nav-bar>
 <div class="container">
-  <h1 class="titulo">{{ posts.titulo }}</h1>
-  <p class="text">{{ posts.texto }}</p>
+  <ng-container>
+  <h1 class="titulo">{{ posts[postId].titulo }}</h1>
+  <p class="text">{{ posts[postId].texto }}</p>
+</ng-container>
 </div>
+
+
+  
