--- a/frontend/src/app/components/configuracao/configuracao.component.css
+++ b/frontend/src/app/components/configuracao/configuracao.component.css
@@ -74,6 +74,12 @@
       text-align: center;
       font-family: "KoHo", sans-serif;
     }
+
+    .informacoes{
+      resize: none;
+      background: none;
+      text-align: center;
+    }
   
     .user-bio-title{
       width: 22rem;
@@ -95,6 +101,12 @@
       font-size: 1.2rem;
       text-align: center;
       font-family: "KoHo", sans-serif;
+    }
+
+    .biografia{
+      resize: none;
+      background: none;
+      text-align: center;
     }
 
     #botao{
