--- a/frontend/src/app/components/tela-cadastro/tela-cadastro.component.html
+++ b/frontend/src/app/components/tela-cadastro/tela-cadastro.component.html
@@ -21,6 +21,6 @@
       name="Repita a Senha"
       placeholder="Repita a Senha"
     />
-    <button id="botao">Finalizar Cadastro</button>
+    <button id="botao" (click)="toLogin()">Finalizar Cadastro</button>
   </div>
 </body>
