--- a/frontend/src/app/components/meuperfil/meuperfil.component.css
+++ b/frontend/src/app/components/meuperfil/meuperfil.component.css
@@ -1,150 +1,173 @@
 .meuperfil-container {
-    width: 100%;
-    height: 90vh;
-  
-    display: grid;
-    grid-template-columns: 20% auto 20%;
-  }
+  width: 100%;
+  height: 90vh;
+
+  display: grid;
+  grid-template-columns: 20% auto 20%;
+}
 .user-card {
-    height: 80vh;
-    width: 90%;
-  
-    display: flex;
-    flex-direction: column;
-  
-    margin: 2rem auto;
-  
-    position: sticky;
-    top: 2rem;
-  
-    background: rgba(134, 231, 255, 0.4);
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-    backdrop-filter: blur(0px);
-    -webkit-backdrop-filter: blur(0px);
-    border-radius: 10px;
-    border: 1px solid rgba(255, 255, 255, 0.18);
-  
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
-  }
-  
-  .user-card:hover {
-    transform: translateY(-0.5rem);
-  
-    background: rgb(205, 245, 255);
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-    backdrop-filter: blur(0px);
-    -webkit-backdrop-filter: blur(0px);
-    border-radius: 10px;
-    border: 1px solid rgba(255, 255, 255, 0.18);
-  }
+  height: 80vh;
+  width: 90%;
 
-  .user-fav{
-    height: 2vh;
-    width: 10%;
-    border-radius: 10%;
-    margin: 2rem auto;
-    margin-top: -20%;
-    margin-right: 80%;
-  }
-  
-  .user-config{
-    height: 2vh;
-    width: 10%;
-    border-radius: 10%;
-    margin: 2rem auto;
-    margin-top: -100%;
-    margin-right: 10%;
-  }
+  display: flex;
+  flex-direction: column;
 
-  .user-image {
-    height: 22vh;
-    width: 60%;
-    border-radius: 50%;
-    margin: 2rem auto;
-  }
-  
-  .user-name {
-    font-size: 1.2rem;
-    text-align: center;
-    font-family: "KoHo", sans-serif;
-    padding: 0.5rem;
-  }
+  margin: 2rem auto;
 
-  .user-info-title{
-    width: 22rem;
-    height: 22px;
-    margin-left: -25.5%;
-    margin-top: 80%;
+  position: sticky;
+  top: 2rem;
 
-    font-size: 1.2rem;
-    text-align: center;
-    font-family: "KoHo", sans-serif
-  }
+  background: rgba(134, 231, 255, 0.4);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(0px);
+  -webkit-backdrop-filter: blur(0px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
 
-  .user-info{
-    width: 22rem;
-    height: 22px;
-    margin-left: -25.5%;
-    margin-top: 5%;
-    resize: none;
-    font-size: 1.2rem;
-    text-align: center;
-    font-family: "KoHo", sans-serif;
-  }
-  .informacoes{
-    resize: none;
-    border: none;
-    background: none;
-    text-align: center;
-  }
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
 
-  .user-bio-title{
-    width: 22rem;
-    height: 350px;
-    margin-left: -25.5%;
-    margin-top: 20%;
+.user-card:hover {
+  transform: translateY(-0.5rem);
 
-    font-size: 1.2rem;
-    text-align: center;
-    font-family: "KoHo", sans-serif;
-  }
+  background: rgb(205, 245, 255);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(0px);
+  -webkit-backdrop-filter: blur(0px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
 
-  .user-bio{
-    width: 22rem;
-    height: 350px;
-    margin-left: -25.5%;
-    margin-top: -40%;
-    font-size: 1.2rem;
-    text-align: center;
-    font-family: "KoHo", sans-serif;
-  }
-  .biografia{
-    resize: none;
-    border: none;
-    background: none;
-    text-align: center;
-  }
-  
+.user-fav {
+  height: 2vh;
+  width: 10%;
+  border-radius: 10%;
+  margin: 2rem auto;
+  margin-top: -20%;
+  margin-right: 80%;
+}
+
+.user-config {
+  height: 2vh;
+  width: 10%;
+  border-radius: 10%;
+  margin: 2rem auto;
+  margin-top: -100%;
+  margin-right: 10%;
+}
+
+.user-image {
+  height: 22vh;
+  width: 60%;
+  border-radius: 50%;
+  margin: 2rem auto;
+}
+
+.user-name {
+  font-size: 1.2rem;
+  text-align: center;
+  font-family: "KoHo", sans-serif;
+  padding: 0.5rem;
+}
+
+.user-info-title {
+  width: 22rem;
+  height: 22px;
+  margin-left: -25.5%;
+  margin-top: 80%;
+
+  font-size: 1.2rem;
+  text-align: center;
+  font-family: "KoHo", sans-serif;
+}
+
+.user-info {
+  width: 22rem;
+  height: 22px;
+  margin-left: -25.5%;
+  margin-top: 5%;
+  resize: none;
+  font-size: 1.2rem;
+  text-align: center;
+  font-family: "KoHo", sans-serif;
+}
+.informacoes {
+  resize: none;
+  border: none;
+  background: none;
+  text-align: center;
+}
+
+.user-bio-title {
+  width: 22rem;
+  height: 350px;
+  margin-left: -25.5%;
+  margin-top: 20%;
+
+  font-size: 1.2rem;
+  text-align: center;
+  font-family: "KoHo", sans-serif;
+}
+
+.user-bio {
+  width: 22rem;
+  height: 350px;
+  margin-left: -25.5%;
+  margin-top: -40%;
+  font-size: 1.2rem;
+  text-align: center;
+  font-family: "KoHo", sans-serif;
+}
+.biografia {
+  resize: none;
+  border: none;
+  background: none;
+  text-align: center;
+}
+
 .post-card {
-    height: 25vh;
-    width: 95%;
-    margin: 2rem auto 3rem;
-  
-    border-radius: 15px;
-    background: #e5e5e5;
-    box-shadow: 5px 5px 12px #bebebe, -5px -5px 12px #ffffff;
-  
-    transition: all 0.3s ease-in-out;
-    cursor: pointer;
-  }
-  
-  .post-card:hover {
-    border-radius: 15px;
-    background: #e5e5e5;
-    box-shadow: 5px 5px 0px #777777, -5px -5px 0px #ffffff;
-  
-    transform: translateY(-0.3rem);
-  }
+  height: 25vh;
+  width: 95%;
+  margin: 2rem auto 3rem;
 
-  
+  border-radius: 15px;
+  background: #e5e5e5;
+  box-shadow: 5px 5px 12px #bebebe, -5px -5px 12px #ffffff;
+
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+.post-card:hover {
+  border-radius: 15px;
+  background: #e5e5e5;
+  box-shadow: 5px 5px 0px #777777, -5px -5px 0px #ffffff;
+
+  transform: translateY(-0.3rem);
+}
+
+.see-more {
+  display: inline-flex;
+  flex-direction: row;
+  margin-top: 3rem;
+
+  cursor: pointer;
+}
+
+.see-more:hover > .see-more-text {
+  opacity: 0.7;
+}
+
+.plus-icon {
+  padding-top: 1px;
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.see-more-text {
+  margin-left: 0.5rem;
+  font-size: 1.5rem;
+  color: #6e2fad;
+  transition: all 0.3s ease-in-out;
+}
