--- a/frontend/src/app/components/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/components/nav-bar/nav-bar.component.html
@@ -1,5 +1,20 @@
 <nav class="navbar">
-  <img class="back-arrow clickable" (click)="backClicked()" src="./assets/back-arrow.svg" alt="" />
-  <img class="logo clickable" routerLink="/home" src="./assets/logo.svg" alt="" />
-  <img class="logout clickable" routerLink="/tela-login" src="./assets/logout.svg" alt="" />
+  <img
+    class="back-arrow clickable"
+    (click)="backClicked()"
+    src="./assets/back-arrow.svg"
+    alt=""
+  />
+  <img
+    class="logo clickable"
+    routerLink="/home"
+    src="./assets/logo.svg"
+    alt=""
+  />
+  <img
+    class="logout clickable"
+    routerLink=""
+    src="./assets/logout.svg"
+    alt=""
+  />
 </nav>
