--- a/frontend/src/app/components/meuperfil/meuperfil.component.html
+++ b/frontend/src/app/components/meuperfil/meuperfil.component.html
@@ -4,30 +4,39 @@
   <div class="user-card">
     <img src="assets/fotoDoPerfil.png" alt="" class="user-image" />
     <p class="user-name">{{ userName }}</p>
-    <img src="assets/engrenagem.svg" alt="" class="user-config" (click)='redirect()'/>
-    <img src="assets/coracao.svg" alt="" class="user-fav" (click)='redirect2()'/>
+    <img
+      src="assets/engrenagem.svg"
+      alt=""
+      class="user-config"
+      (click)="redirect()"
+    />
+    <img
+      src="assets/coracao.svg"
+      alt=""
+      class="user-fav"
+      (click)="redirectToFavoritos()"
+    />
     <div class="user-info-title">
       <label>Informações</label>
     </div>
     <div class="user-info">
-      <textarea class="informacoes" maxlength="50" readonly>matenrique@gmail.com</textarea>
+      <textarea class="informacoes" maxlength="50" readonly>
+matenrique@gmail.com</textarea
+      >
     </div>
     <div class="user-bio-title">
       <label>Biografia</label>
     </div>
     <div class="user-bio">
-      <textarea class="biografia" maxlength="250" readonly>Cursando Ciencias da Computação na UNI-BH</textarea>
+      <textarea class="biografia" maxlength="250" readonly>
+Cursando Ciencias da Computação na UNI-BH</textarea
+      >
     </div>
   </div>
-
-  <!-- <div class="post-container">
-    <ng-container *ngFor="let post of posts">
-      <div class="post-card"></div>
-    </ng-container>
-  </div> -->
   <app-post-card></app-post-card>
 
-  <div class="tags">
-    <app-tags-card></app-tags-card>
+  <div class="see-more" (click)="redirectToCreate()">
+    <img class="plus-icon" src="assets/plus.svg" alt="Plus icon" />
+    <span class="see-more-text">Criar post</span>
   </div>
 </main>
