--- a/frontend/src/app/components/configuracao/configuracao.component.html
+++ b/frontend/src/app/components/configuracao/configuracao.component.html
@@ -1,7 +1,7 @@
 <app-nav-bar></app-nav-bar>
 <main class="config-container">
     <div class="user-card">
-        <img src="assets/user.svg" alt="" class="user-image" />
+        <img src="assets/fotoDoPerfil.png" alt="" class="user-image" />
         <p class="user-name">{{ userName }}</p>
         <div class="user-info-title">
             <label>Informações</label> 
