--- a/frontend/src/app/components/criacao-post/criacao-post.component.html
+++ b/frontend/src/app/components/criacao-post/criacao-post.component.html
@@ -1,10 +1,5 @@
 
-<nav class="navbar">
-    <img class="back-arrow clickable" src="./assets/back-arrow.svg" alt="" />
-    <img class="logo clickable" src="./assets/logo.svg" alt="" />
-    <img class="logout clickable" src="./assets/logout.svg" alt="" />
-</nav>
-
+<app-nav-bar></app-nav-bar>
 <h1>Criação de Posts</h1>
 <br>
 <div class="campo">
