--- a/frontend/src/app/components/tela-cadastro/tela-cadastro.component.html
+++ b/frontend/src/app/components/tela-cadastro/tela-cadastro.component.html
@@ -1,3 +1,4 @@
+<body class="pagina">
 <img class="logo-clickable" src="./assets/logo.svg" alt="" />
 <div id="cadastro">
   <input
@@ -24,3 +25,4 @@
     <span>Finalizar Cadastro</span>
   </button>
 </div>
+</body>
