--- a/frontend/src/app/components/tela-login/tela-login.component.html
+++ b/frontend/src/app/components/tela-login/tela-login.component.html
@@ -1,3 +1,4 @@
+<body class="pagina">
 <img class="logo-clickable" src="./assets/logo.svg" alt="" />
 <div id="login">
   <input
@@ -14,3 +15,4 @@
     >Não tem uma conta? Cadastre-se</a
   >
 </div>
+</body>
